# BugSlayers

./: .gitignore  FRONTEND_BACKEND_INTEGRATION.md  README.md  docker-compose.yml
ai-agent/: requirements.txt
ai-agent/app/: main.py
backend/: .gitignore  BACKEND_CHECKLIST.md  DEMO.md  Dockerfile  OAUTH2_SETUP.md  create_db.py  demo_curl.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  tmp_inspect_db.py  tmp_old_App.jsx  tmp_old_AppRoutes.jsx  tmp_old_Home.jsx  tmp_old_Login.jsx  tmp_old_SignUp.jsx
backend/apis/: __init__.py  ai.py  companies.py  diagnostics.py
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/tests/: test_diagnostics_api.py  test_main.py
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json
frontend/diagnostic form/: index.html  package-lock.json  package.json
frontend/diagnostic form/src/: App.jsx
frontend/diagnostic form/src/components/: DiagnosticoForm.jsx  PreguntaItem.jsx
frontend/diagnostic form/src/data/: preguntasDiagnostico.js
frontend/diagnostic form/src/services/: diagnosticoService.js
frontend/diagnostic-form/: package-lock.json  package.json
frontend/diagnostic-form/src/: App.jsx
frontend/diagnostic-form/src/components/: DiagnosticoForm.css  DiagnosticoForm.jsx  DiagnosticoResultados.css  DiagnosticoResultados.jsx  PreguntaItem.css
frontend/diagnostic-form/src/data/: preguntasDiagnostico.js
frontend/diagnostic-form/src/utils/: calculosDiagnostico.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: PreguntaItem.css  PreguntaItem.jsx
frontend/src/components/home/: About.css  About.jsx  Hero.css  Hero.jsx
frontend/src/components/layout/: Footer.css  Footer.jsx  Layout.css  Layout.jsx  Navbar.css  Navbar.jsx
frontend/src/data/: preguntasDiagnostico.js
frontend/src/pages/: Auth.css  AuthCallback.jsx  DiagnosticoPage.css  DiagnosticoPage.jsx  DiagnosticoResults.jsx  Home.jsx  Login.jsx  SignUp.jsx  welcome.css  welcome.jsx
frontend/src/pages/admin/: AdminDashboard.css  AdminDashboard.jsx  AdminLayout.css  AdminLayout.jsx
frontend/src/pages/admin/components/: ActivityTimeline.css  ActivityTimeline.jsx  DonutChart.css  DonutChart.jsx  Header.css  Header.jsx  KpiCards.css  KpiCards.jsx  RiskTable.css  RiskTable.jsx  Sidebar.css  Sidebar.jsx
frontend/src/pages/info-company/: CompanyOnboarding.jsx
frontend/src/routes/: AppRoutes.jsx
frontend/src/services/: aiService.js  diagnosticoService.js
frontend/src/styles/: Login.css  SignUp.css  global.css  variables.css
(+29 files in other folders)
