[project]
name = "bugsalyers-backend"
version = "0.1.0"
description = "BugSalyers backend API service"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy==2.0.23",
    "pydantic[email]==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "cryptography==43.0.0",
    "python-multipart==0.0.6",
    "email-validator==2.1.0",
    "authlib==1.3.0",
    "google-auth-oauthlib==1.2.0",
    "google-auth==2.25.2",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "httpx==0.25.0",
    "openai>=2.44.0",
]

[project.optional-dependencies]
dev = [
    "black==24.3.0",
    "flake8==7.0.0",
    "pycodestyle==2.11.0",
    "mypy==1.9.0",
    "pytest==8.4.1",
    "pytest-cov==4.1.0",
    "isort==5.12.0",
    "uv==0.9.11",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "apis*"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
  \./|
  \venv/|
  \env/|
  \.git/|
  \__pycache__/|
  \build/|
  \dist/|
  \.pytest_cache/
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = ["__pycache__", "venv", "env", ".git", "build", "dist", ".pytest_cache"]

[tool.mypy]
python_version = 3.11
strict = true
ignore_missing_imports = true
